--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,14 @@ body {
 .a {
   text-decoration: none
 }
+
+.bd-bottom {
+  border-bottom: 1px solid #fff
+}
+
+.bd-right {
+  border-right: 1px solid #fff
+}
 /* end utility classes */
 
 header {
@@ -81,6 +89,7 @@ header {
 .first-nav .fl a {
   color: #70808C
 }
+
 #border-right {
   display: inline-block;
   height: 18px;
@@ -239,11 +248,6 @@ h4 {
   margin: 0 60px
 }
 
-/* .content-5 {
-  width: 30%;
-  background: #fff
-} */
-
 .content-3 hr {
   margin-top: 70px;
   margin-bottom: 40px
@@ -288,4 +292,45 @@ h4 {
   font-size: 20px;
   font-family: bold;
   margin-bottom: 20px
+}
+
+.gradient-row {
+  width: 100%;
+  height: 700px;
+  background: linear-gradient(to right, #48A4B8 , #53B8A8);
+  margin-top: 60px;
+  text-align: center;
+}
+
+.top-text h2 {
+  color: #fff;
+  padding: 40px 0;
+  font-family: bold;
+  font-size: 32px
+}
+
+.top-text p {
+  color: #fff;
+  font-size: 14px
+}
+
+.block {
+  width: 25%;
+  padding: 20px 0
+}
+
+.block p {
+  font-size: 30px;
+  color: #fff;
+  padding-top: 10px;
+  font-family: bold
+}
+
+.block span {
+  font-size: 10px;
+  color: #fff;
+}
+
+.row {
+  margin-top: 70px
 }
