--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ body {
 }
 
 .a {
-  text-decoration: none
+  text-decoration: none;
 }
 
 .bd-bottom {
@@ -366,4 +366,69 @@ h4 {
   width: 600px;
   margin-top: 50px;
   margin-right: 50px
+}
+
+.man {
+  margin-top: 40px
+}
+.img-man img {
+  height: 300px
+}
+
+.text-man {
+  margin-top: 40px
+}
+.text-man h2 {
+  width: 500px;
+  font-size: 32px
+}
+
+.text-man p {
+  width: 500px;
+  font-size: 14px;
+  margin: 50px 0
+}
+
+footer {
+  background: #374959;
+  height: 500px
+}
+
+footer h5 {
+  color: #fff;
+  margin: 30px 0;
+  font-family: bold
+}
+
+.footer-box {
+  width: 24%
+}
+
+.footer-box p {
+  color: #fff;
+  padding-bottom: 15px;
+  font-size: 13px
+}
+
+.footer-box a {
+  color: #fff
+}
+
+.footer-box a:hover {
+  text-decoration: underline;
+  color: #91CFDC
+}
+
+.button-type-c {
+  border-color: #DBDEE0;
+  background: #DBDEE0;
+}
+
+.fourth-footer-box .button a {
+  color: #000;
+  text-decoration: none
+}
+
+.fourth-footer-box p:nth-last-child(1) {
+  padding-bottom: 30px
 }
